--- a/public/newstemp/css/style.css
+++ b/public/newstemp/css/style.css
@@ -121,7 +121,7 @@
     .sticky-top .top-link {
         display: none;
     }
-    
+
 }
 
 .topbar .top-link a {
@@ -224,7 +224,8 @@
 /*** Features Start ***/
 .features {
     width: 100%;
-    background: linear-gradient(rgba(26, 125, 255, 0.5), rgba(255, 255, 255, 0.3)), url(../img/features-background.jpg);
+    height: 500px;
+    background: linear-gradient(rgba(172, 237, 143, 0.5), rgba(234, 116, 185, 0.3)), url(../img/news-22.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -349,13 +350,13 @@
 
 .lifestyle .lifestyle-item .lifestyle-content {
     position: absolute;
-    width: 100%; 
-    height: 100%; 
-    top: 0; 
-    left: 0; 
-    padding: 20px; 
-    display: flex; 
-    flex-direction: column; 
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
     background: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
 }
